[regression] [bisected] piglit.spec.arb_framebuffer_object.fbo-drawbuffers-none gldrawpixels fails
Mesa 21.1.0-devel implementation error: Parameter storage reallocation disallowed. This is a Mesa bug.
Increase the reservation size in the code.
Please report at https://gitlab.freedesktop.org/mesa/mesa/-/issues
[1] 56698 abort (core dumped) ./bin/useprogram-refcount-1 -auto -fb
error occurs after running one of the tests two or more times (with not clear cash)
./bin/useprogram-refcount-1 -auto -fbo
./bin/fbo-drawbuffers-none glDrawPixels -auto -fbo
The issue bisected to 9fcc3697
commit 9fcc36977038597e1f381fca5289420679376eb8
Author: Eric Anholt <eric@anholt.net>
Date: Thu Feb 18 13:53:31 2021 -0800
mesa: Always make sure uniform storage doesn't get reallocated.
Every caller of associate_uniform_storage was doing this to safety-check
that the uniform storage didn't get reallocated, except for
st_deserialise_ir_program(). This ended up leaving an opening for
use-after-free without hitting the assert in the hot-cache case (and I
found it on freedreno). Having added it, it also reveals use-after-frees
in the drawpixels shader variant cases on llvmpipe and zink.
Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/8997>
src/gallium/drivers/llvmpipe/ci/gitlab-ci.yml | 3 +++
src/gallium/drivers/llvmpipe/ci/llvmpipe-quick_gl.txt | 2 ++
src/mesa/program/ir_to_mesa.cpp | 2 ++
src/mesa/state_tracker/st_glsl_to_nir.cpp | 1 -
src/mesa/state_tracker/st_glsl_to_tgsi.cpp | 1 -
5 files changed, 7 insertions(+), 2 deletions(-)